--- a/Prueba5/server/package.json
+++ b/Prueba5/server/package.json
@@ -9,11 +9,12 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
-    "cors": "^2.8.4",
     "socket.io": "^2.0.4"
   }
 }
